# web_scrapper

./: .gitignore  DOCUMENTATION.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
core/: crawler_engine.py  deduplication.py  rate_limiter.py  robots_parser.py  session_manager.py  url_frontier.py  url_normalizer.py
extraction/: content_extractor.py  entity_extractor.py  heading_extractor.py  link_extractor.py  media_extractor.py  structured_data_extractor.py
intelligence/: __init__.py  content_classifier.py  content_cleaner.py  language_detector.py  similarity_detector.py  summarizer.py
rendering/: renderer.py  static_fetcher.py
storage/: __init__.py  elastic_storage.py  json_output.py  mongo_storage.py  redis_queue.py
utils/: file_utils.py  hash_utils.py  logger.py  proxy_manager.py  user_agents.py
