[project]
name = "iawic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "aiolimiter>=1.2.1",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "elasticsearch>=9.3.0",
    "extruct>=0.18.0",
    "html5lib>=1.1",
    "httpx[http2]>=0.28.1",
    "langdetect>=1.0.9",
    "lxml>=6.0.2",
    "mf2py>=2.0.1",
    "motor>=3.7.1",
    "newspaper3k>=0.2.8",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "pyrdfa3>=3.6.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "readability-lxml>=0.8.4.1",
    "redis>=7.1.1",
    "rich>=14.3.2",
    "scrapy>=2.14.1",
    "simhash>=2.1.2",
    "spacy>=3.8.11",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tldextract>=5.3.1",
    "torch>=2.10.0",
    "trafilatura>=2.0.0",
    "transformers>=5.1.0",
    "uvloop>=0.22.1",
    "validators>=0.35.0",
    "w3lib>=2.4.0",
]
